# travel_agency

./: .gitignore  README.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/app/: router.jsx  store.js  theme.js
frontend/src/features/components/: Aside.jsx
frontend/src/features/dashboard/: dashboardData.js  dashboardSlice.js
frontend/src/features/travel/: travelData.js  travelSlice.js
frontend/src/pages/: DashboardPage.jsx  TravelsPage.jsx
frontend/src/shared/ui/: Icons.jsx
services/auth-service/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: a1f3c2e4b5d6_create_users_table.py
services/auth-service/app/: dependencies.py  main.py
services/auth-service/app/core/: config.py  database.py  enums.py  exceptions.py
services/auth-service/app/logic/: auth.py  jwks.py  jwt.py  rate_limiter.py
services/auth-service/app/models/: __init__.py  user.py  users.py
services/auth-service/app/repositories/: user.py
services/auth-service/app/routers/: __init__.py  auth.py  exception_handlers.py  jwks.py  users.py
services/auth-service/app/schemas/: token.py  user.py
services/auth-service/tests/: conftest.py  factories.py
services/auth-service/tests/integration/: conftest.py  test_api_auth.py  test_api_users.py
services/auth-service/tests/unit/: test_auth_service.py  test_jwt.py  test_schemas.py  test_user_model.py
services/tour-service/app/core/: config.py  exceptions.py
services/tour-service/app/logic/: jwks_client.py  jwt.py
