[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "auth-service"
version = "0.1.0"
description = "Микросервис аутентификации и авторизации (JWT ES256, PostgreSQL, Redis) для платформы StackTour"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",      # passlib не поддерживает bcrypt>=4.0 (убрали __about__)
    "python-multipart>=0.0.9",   # нужен FastAPI для OAuth2PasswordRequestForm (form data)
    "psycopg2-binary>=2.9.0",   # синхронный драйвер для Alembic миграций
]

[project.optional-dependencies]
dev = [
    # Тестирование
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",           # AsyncClient для тестов FastAPI
    # Линтинг и форматирование
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Стабы типов
    "types-passlib>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/models/__init__.py",
    "app/main.py",          # точка входа, не содержит бизнес-логики
    "app/core/config.py",   # только Pydantic-настройки
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ASYNC", "S", "PTH"]
ignore = [
    "B008",   # FastAPI активно использует вызовы функций в аргументах по умолчанию
    "S101",   # assert используется в pytest
]

[tool.ruff.format]
line-length = 100
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Сторонние библиотеки без полных стабов типов
module = ["jose.*", "passlib.*", "redis.*", "alembic.*"]
ignore_missing_imports = true
